--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Log In
@@ -8,7 +9,7 @@
     <form method="post" class="form">
         <h2>Log In</h2>
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button class="btn btn-success" type="submit">Log in</button>
     </form>
 {% endblock %}
