--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Sign Up
@@ -9,7 +10,7 @@
 
     <form method="post" class="form">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit" class="btn btn-success">Sign up</button>
     </form>
 {% endblock %}
